Believe I am done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <aside></aside>
+                    <h5>Highest Score: <span id = "high-score">0</span></h5>
                 </div>
                 <div class="col-md-2">
                     <button id="start-button">Start Quiz</button>
@@ -25,7 +25,7 @@
                 <div class="col-md-5">
                     <aside></aside>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2" id = "active-div">
                     <ul id="quiz-list">
                         
                     </ul>
